--- a/Exercise1/ex1_aileen.ipynb
+++ b/Exercise1/ex1_aileen.ipynb
@@ -6097,7 +6097,8 @@
       "accuracy: 0.8139049256848053\n",
       "precision: 0.78031212484994\n",
       "recall: 0.32795156407669024\n",
-      "F1: 0.46181172291296624\n"
+      "F1: 0.46181172291296624\n",
+      "Cross validated scores: [0.81818182 0.81470106 0.81244881 0.81900082 0.81347256]\n"
      ]
     }
    ],
@@ -6124,9 +6125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion matrix: [[5830  329]\n",
+      " [1395  587]]\n",
+      "accuracy: 0.788232403881587\n",
+      "precision: 0.6408296943231441\n",
+      "recall: 0.29616548940464177\n",
+      "F1: 0.4051069703243616\n",
+      "Cross validated scores: [0.79197379 0.79033579 0.77989353 0.79176904 0.78644554]\n"
+     ]
+    }
+   ],
    "source": [
     "nb = GaussianNB()\n",
     "nb.fit(X_train_imp,y_train)\n",
