change parkinson columns
change parkinson columns

--- a/Exercise2/ReadData.ipynb
+++ b/Exercise2/ReadData.ipynb
@@ -52,7 +52,7 @@
       },
       "outputs": [],
       "source": [
-        "X_parkinsons= parkinsons[['age', 'sex',  'Jitter(%)', 'Shimmer',  'NHR', 'HNR', 'RPDE', 'DFA', 'PPE']] # other columns dropped because of high correlations\n",
+        "X_parkinsons= parkinsons.drop(['motor_UPDRS','total_UPDRS'],axis=1)\n",
         "y_parkinsons= parkinsons[\"total_UPDRS\"]\n",
         "x_train_parkinsons, x_test_parkinsons, y_train_parkinsons, y_test_parkinsons = train_test_split(X_parkinsons, y_parkinsons, test_size=0.2, random_state= 0)\n",
         "# scale data\n",
